--- a/hangman/index.html
+++ b/hangman/index.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Hangman</title>
+  <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <script>main.js</script>
+  <script src="./scripts/word-list.js" defer></script>
+  <script src="./scripts/main.js" defer></script>
 </body>
 </html>
